// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`python snapshot 1`] = `
" AuthorizationToken <span data-heading-title=\\"AuthorizationToken\\" data-heading-id=\\"awscdkawsecrauthorizationtoken\\"></span>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html


# Static Functions <span data-heading-title=\\"Static Functions\\" data-heading-id=\\"static-functions\\"></span>

## \`grant_read\` <span data-heading-title=\\"\`grant_read\`\\" data-heading-id=\\"awscdkawsecrauthorizationtokengrantread\\"></span>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.AuthorizationToken.grant_read(grantee: IGrantable)
\`\`\`

### \`grantee\`<sup>Required</sup> <span data-heading-title=\\"\`grantee\`<sup>Required</sup>\\" data-heading-id=\\"awscdkawsecrauthorizationtokengrantee\\"></span>

- *Type:* [\`aws_cdk.aws_iam.IGrantable\`](#aws_cdk.aws_iam.IGrantable)

---


"
`;

exports[`typescript snapshot 1`] = `
" AuthorizationToken <span data-heading-title=\\"AuthorizationToken\\" data-heading-id=\\"awscdkawsecrauthorizationtoken\\"></span>

Authorization token to access private ECR repositories in the current environment via Docker CLI.

> https://docs.aws.amazon.com/AmazonECR/latest/userguide/registry_auth.html


# Static Functions <span data-heading-title=\\"Static Functions\\" data-heading-id=\\"static-functions\\"></span>

## \`grantRead\` <span data-heading-title=\\"\`grantRead\`\\" data-heading-id=\\"awscdkawsecrauthorizationtokengrantread\\"></span>

\`\`\`typescript
import { AuthorizationToken } from '@aws-cdk/aws-ecr'

AuthorizationToken.grantRead(grantee: IGrantable)
\`\`\`

### \`grantee\`<sup>Required</sup> <span data-heading-title=\\"\`grantee\`<sup>Required</sup>\\" data-heading-id=\\"awscdkawsecrauthorizationtokengrantee\\"></span>

- *Type:* [\`@aws-cdk/aws-iam.IGrantable\`](#@aws-cdk/aws-iam.IGrantable)

---


"
`;
